--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaLocalizacion.xhtml
@@ -196,7 +196,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 115%; height: inherit; border-radius: 0px; left: -10px;" id="fooMotivo" action="motivolocalizacion" value=""/>
+                                        <p:commandButton style="width: 115%; height: inherit; border-radius: 0px; left: -10px;" id="fooMotivo" action="motivolocalizacion" onclick="#{controlMotivosLocalizaciones.recibirPag('motivolocalizacion')}" value=""/>
                                     </f:facet>
                                 </p:column>
 
